<resources>
    <string name="app_name">Primeras vistas</string>
    <string name="guardar_autom_ticamente">Guardar automáticamente</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="name">Name</string>
    <string name="hola">Hola</string>
    <string name="textview">TextView</string>
    <string name="type_here">Type here:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_plus">+</string>
    <string name="_equal">=</string>
    <string name="_c">C</string>
    <string name="contraintlayout_design">Diseño con ConstraintLayout</string>
</resources>
